[package]
name = "betterhesi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byte-unit = "4.0.19"
compress-tools = "0.14.3"
indicatif = "0.17.7"
reqwest = "0.11.22"
tokio = { version = "1.32.0", features = ["full"] }
walkdir = "2.4.0"
